@@ -9,11 +9,7 @@ import org.springframework.util.Assert;
 
 import javax.annotation.Nullable;
 import java.util.List;
-import java.util.stream.Collectors;
 
-/**
- * @author yaolianhua789@gmail.com
- **/
 @Component
 @Slf4j
 public class ActivityQuery {
@@ -37,8 +33,9 @@ public class ActivityQuery {
         Assert.hasText(user, "user is null");
 
         List<ActivityEntity> entities = activityRepository.findByUser(user);
-        List<ActivityLog> activityLogs = entities.stream().map(e -> e.toT(ActivityLog.class))
-                .collect(Collectors.toList());
+        List<ActivityLog> activityLogs = entities.stream()
+                .map(e -> e.toT(ActivityLog.class))
+                .toList();
 
         List<ActivityLog> filtered = filter(activityLogs, target, action);
         //desc sorted
@@ -56,18 +53,18 @@ public class ActivityQuery {
             return activities.stream()
                     .filter(e -> target.name().equals(e.getTarget()))
                     .filter(e -> action.name().equals(e.getAction()))
-                    .collect(Collectors.toList());
+                    .toList();
         }
 
         if (target != null) {
             return activities.stream()
                     .filter(e -> target.name().equals(e.getTarget()))
-                    .collect(Collectors.toList());
+                    .toList();
         }
 
         return activities.stream()
                 .filter(e -> action.name().equals(e.getAction()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
 }
